@startuml

title Factor Architecture

interface Factor <<trait>> {
    +scope() : &[usize]
    +ndim() : usize
    +reduce(vars: &[usize]) : FactorKind
    +combine(other: FactorKind) : FactorKind
}

interface DiscreteFactor <<trait>> {
    +card() : &[usize]
}

class ScalarFactor {
    -value : f64
}

class UnaryFactor {
    -var : usize
    -data : Vec<f64>
}

class DenseFactor {
    -scope : Vec<usize>
    -data : ArrayD<f64>
}

enum FactorKind <<enum>> {
    Scalar(ScalarFactor)
    Unary(UnaryFactor)
    Dense(DenseFactor)
}

Factor <|-- DiscreteFactor

DiscreteFactor <|.. DenseFactor
DiscreteFactor <|.. UnaryFactor
Factor <|.. ScalarFactor

@enduml